# AgenticAPI

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_LOG.md  Makefile  PROJECT.md  README.md  ROADMAP.md  SECURITY.md  VISION.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  publish.yml
api/a2a/: index.html
api/app/: index.html
api/approval/: index.html
api/audit/: index.html
api/context/: index.html
api/dependencies/: index.html
api/harness/: index.html
api/htmx/: index.html
api/interface/: index.html
api/llm/: index.html
api/mesh/: index.html
api/observability/: index.html
api/ops/: index.html
api/pipeline/: index.html
api/policies/: index.html
api/sandbox/: index.html
api/security/: index.html
api/testing/: index.html
api/tools/: index.html
api/types/: index.html
api/upload/: index.html
development/: README.md  architecture.md  ci.md  extending.md  extensions.md  modules.md  security.md  testing.md
docs/: architecture.md  examples.md  index.md  modules.md  security.md  testing.md
docs/api/: a2a.md  app.md  approval.md  audit.md  context.md  dependencies.md  harness.md  htmx.md  interface.md  llm.md  mesh.md  observability.md  ops.md  pipeline.md  policies.md  sandbox.md  security.md  testing.md  tools.md  types.md  upload.md
docs/development/: contributing.md  extensions.md  modules.md
docs/getting-started/: examples.md  installation.md  quickstart.md
docs/guides/: a2a.md  approval.md  architecture.md  authentication.md  cost-budgeting.md  dependency-injection.md  eval-harness.md  file-handling.md  harness.md  htmx.md  intents.md  llm-backends.md  memory.md  mesh.md  observability.md  openapi.md  ops-agents.md  pipelines.md  rest-compat.md  safety-policies.md  security.md  sessions.md  streaming.md  testing.md  tool-decorator.md  tools.md  typed-intents.md
docs/internals/: architecture.md  budgets.md  claude-agent-sdk-extension-plan.md  contributing.md  current-state.md  dependencies.md  extending.md  extensions.md  modules.md  observability.md  security.md  testing.md
examples/: README.md
examples/01_hello_agent/: app.py
examples/02_ecommerce/: app.py
examples/03_openai_agent/: app.py
examples/04_anthropic_agent/: app.py
examples/05_gemini_agent/: app.py
examples/06_full_stack/: app.py
examples/07_comprehensive/: app.py
examples/08_mcp_agent/: app.py
examples/09_auth_agent/: app.py
examples/10_file_handling/: app.py
examples/11_html_responses/: app.py
examples/12_htmx/: app.py
examples/13_claude_agent_sdk/: app.py
examples/14_dependency_injection/: app.py
examples/15_budget_policy/: app.py
examples/16_observability/: app.py  audit.sqlite
examples/17_typed_intents/: app.py
examples/18_rest_interop/: app.py
examples/19_native_function_calling/: app.py
examples/20_streaming_release_control/: app.py
examples/21_persistent_memory/: app.py
examples/22_safety_policies/: app.py
examples/23_eval_harness/: app.py
examples/24_code_cache/: app.py
examples/25_harness_playground/: app.py
examples/26_dynamic_pipeline/: app.py
examples/27_multi_agent_pipeline/: app.py
examples/28_sessions_and_tasks/: app.py
examples/29_agentic_loop/: app.py
examples/30_agent_workflow/: app.py
examples/31_sandbox_and_guards/: app.py
examples/32_harness_mcp_tools/: app.py
examples/33_trace_inspector/: app.py
extensions/agenticapi-claude-agent-sdk/: README.md  pyproject.toml
extensions/agenticapi-claude-agent-sdk/examples/: 01_simple_query.py  02_with_agenticapi_tools.py  03_with_audit.py  README.md
extensions/agenticapi-claude-agent-sdk/src/agenticapi_claude_agent_sdk/: __init__.py  _imports.py  backend.py  exceptions.py  messages.py  options.py  permissions.py  runner.py  tools.py
extensions/agenticapi-claude-agent-sdk/tests/: conftest.py  test_backend.py  test_imports.py  test_messages.py  test_permissions.py  test_runner.py  test_tools.py
getting-started/examples/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/a2a/: index.html
guides/approval/: index.html
guides/architecture/: index.html
guides/authentication/: index.html
guides/cost-budgeting/: index.html
guides/dependency-injection/: index.html
guides/eval-harness/: index.html
guides/file-handling/: index.html
guides/harness/: index.html
guides/htmx/: index.html
guides/intents/: index.html
guides/llm-backends/: index.html
guides/memory/: index.html
guides/mesh/: index.html
guides/observability/: index.html
guides/openapi/: index.html
guides/ops-agents/: index.html
guides/pipelines/: index.html
guides/rest-compat/: index.html
guides/safety-policies/: index.html
guides/security/: index.html
guides/sessions/: index.html
guides/streaming/: index.html
guides/testing/: index.html
guides/tool-decorator/: index.html
guides/tools/: index.html
guides/typed-intents/: index.html
internals/architecture/: index.html
internals/budgets/: index.html
internals/ci/: index.html
internals/claude-agent-sdk-extension-plan/: index.html
internals/contributing/: index.html
internals/current-state/: index.html
internals/dependencies/: index.html
internals/extending/: index.html
internals/extensions/: index.html
internals/modules/: index.html
internals/observability/: index.html
internals/security/: index.html
internals/testing/: index.html
scripts/: bump_version.py
search/: search_index.json
src/agenticapi/: __init__.py  _compat.py  _version.py  app.py  exceptions.py  openapi.py  params.py  routing.py  security.py  types.py
tests/: conftest.py
tests/benchmarks/: bench_intent_parsing.py  bench_policy_evaluation.py  bench_sandbox_startup.py  bench_static_analysis.py
tests/e2e/: test_examples.py  test_full_request_cycle.py
tests/integration/: test_auth_flow.py  test_endpoint_flow.py  test_fastapi_compat.py  test_harness_flow.py
tests/unit/: test_agent_test_case.py  test_app.py  test_background_tasks.py  (+24 more)
(+192 files in other folders)
