[project]
name = "agentharnessapi"
dynamic = ["version"]
description = "Agent-native web framework with harness engineering for Python"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.13"
authors = [
    {name = "shibuiwilliam", email = "shibuiyusuke@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
keywords = ["agent", "ai", "llm", "harness", "framework", "fastapi", "async", "openapi"]
dependencies = [
    "anthropic>=0.89.0",
    "google-genai>=1.70.0",
    "httpx>=0.28.1",
    "openai>=2.30.0",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.20",
    "starlette>=1.0.0",
    "structlog>=25.5.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.27.0"]
claude-agent-sdk = ["claude-agent-sdk>=0.1.58,<0.2"]

[dependency-groups]
dev = [
    "isort>=8.0.1",
    "mypy>=1.20.0",
    "pre-commit>=4.2.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
    "uvicorn[standard]>=0.34.0",
]
docs = [
    "mkdocs-material>=9.6.0",
    "mkdocstrings[python]>=0.29.0",
]

[project.urls]
Homepage = "https://github.com/shibuiwilliam/AgenticAPI"
Documentation = "https://shibuiwilliam.github.io/AgenticAPI/"
Repository = "https://github.com/shibuiwilliam/AgenticAPI"
Issues = "https://github.com/shibuiwilliam/AgenticAPI/issues"
Changelog = "https://github.com/shibuiwilliam/AgenticAPI/blob/main/IMPLEMENTATION_LOG.md"

[project.scripts]
agenticapi = "agenticapi.cli.main:cli"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
# Strip +local metadata so PyPI accepts untagged builds.
# Tagged commits (v0.2.0) get clean versions (0.2.0).
# Untagged commits get dev versions (0.2.0.dev3).
raw-options.local_scheme = "no-local-version"
# Fallback when setuptools-scm cannot derive a version from git
# (e.g. shallow clones without tags, tarball installs).
fallback-version = "0.0.0.dev0"

[tool.hatch.build.hooks.vcs]
version-file = "src/agenticapi/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/agenticapi"]

[tool.ruff]
line-length = 120
target-version = "py313"
extend-exclude = ["src/agenticapi/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "TCH", "RUF"]
ignore = ["N818"]  # Exception names like PolicyViolation are intentional per spec

[tool.ruff.lint.flake8-bugbear]
# Allow Depends() in function defaults — this is the canonical FastAPI/AgenticAPI pattern
# and the framework's scanner specifically looks for it as a default value.
extend-immutable-calls = [
    "agenticapi.Depends",
    "agenticapi.dependencies.Depends",
    "agenticapi.dependencies.depends.Depends",
]

[tool.ruff.lint.isort]
known-first-party = ["agenticapi"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "agenticapi.interface.compat.mcp"
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "claude_agent_sdk.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "agenticapi.ext.claude_agent_sdk.*"
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "agenticapi.mcp_tools.*"
warn_unused_ignores = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "requires_llm: Tests requiring LLM API key",
    "requires_db: Tests requiring database connection",
    "slow: Tests taking more than 10 seconds",
    "benchmark: Benchmark tests",
]
