[project]
name = "agenticapi-claude-agent-sdk"
version = "0.1.0"
description = "Claude Agent SDK extension for AgenticAPI"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.13"
authors = [
    {name = "AgenticAPI maintainers"},
]
keywords = ["agenticapi", "claude", "anthropic", "agent", "sdk", "harness"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "agenticapi>=0.1.0",
    "claude-agent-sdk>=0.1.58,<0.2",
    "structlog>=25.5.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
]

[project.urls]
Homepage = "https://github.com/agenticapi/agenticapi"
Documentation = "https://github.com/agenticapi/agenticapi/blob/main/extensions/agenticapi-claude-agent-sdk/README.md"
Issues = "https://github.com/agenticapi/agenticapi/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agenticapi_claude_agent_sdk"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "TCH", "RUF"]
ignore = ["N818"]

[tool.ruff.lint.isort]
known-first-party = ["agenticapi_claude_agent_sdk"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "claude_agent_sdk.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
